--- a/3.0 Training and Detection.ipynb
+++ b/3.0 Training and Detection.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,34 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 file(s) moved.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.data-00000-of-00001\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/checkpoint\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/checkpoint/ckpt-0.index\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/pipeline.config\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/saved_model.pb\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.data-00000-of-00001\n",
-      "x ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/saved_model/variables/variables.index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This block of code downloads and extracts the pretrained model archive\n",
     "if os.name =='posix':\n",
@@ -279,17 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'Tensorflow\\scripts'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not os.path.exists(files['TF_RECORD_SCRIPT']):\n",
     "    !git clone https://github.com/nicknochnack/GenerateTFRecord {paths['SCRIPTS_PATH']}"
@@ -297,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -333,9 +300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow\\workspace\\annotations\\train.record\n"
+     ]
+    }
+   ],
    "source": [
     "print(os.path.join(paths['ANNOTATION_PATH'], 'train.record'))"
    ]
@@ -349,9 +324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 file(s) copied.\n"
+     ]
+    }
+   ],
    "source": [
     "if os.name =='posix':\n",
     "    !cp {os.path.join(paths['PRETRAINED_MODEL_PATH'], PRETRAINED_MODEL_NAME, 'pipeline.config')} {os.path.join(paths['CHECKPOINT_PATH'])}\n",
@@ -368,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,16 +372,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'model': ssd {\n",
+       "   num_classes: 90\n",
+       "   image_resizer {\n",
+       "     fixed_shape_resizer {\n",
+       "       height: 320\n",
+       "       width: 320\n",
+       "     }\n",
+       "   }\n",
+       "   feature_extractor {\n",
+       "     type: \"ssd_mobilenet_v2_fpn_keras\"\n",
+       "     depth_multiplier: 1.0\n",
+       "     min_depth: 16\n",
+       "     conv_hyperparams {\n",
+       "       regularizer {\n",
+       "         l2_regularizer {\n",
+       "           weight: 3.9999998989515007e-05\n",
+       "         }\n",
+       "       }\n",
+       "       initializer {\n",
+       "         random_normal_initializer {\n",
+       "           mean: 0.0\n",
+       "           stddev: 0.009999999776482582\n",
+       "         }\n",
+       "       }\n",
+       "       activation: RELU_6\n",
+       "       batch_norm {\n",
+       "         decay: 0.996999979019165\n",
+       "         scale: true\n",
+       "         epsilon: 0.0010000000474974513\n",
+       "       }\n",
+       "     }\n",
+       "     use_depthwise: true\n",
+       "     override_base_feature_extractor_hyperparams: true\n",
+       "     fpn {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       additional_layer_depth: 128\n",
+       "     }\n",
+       "   }\n",
+       "   box_coder {\n",
+       "     faster_rcnn_box_coder {\n",
+       "       y_scale: 10.0\n",
+       "       x_scale: 10.0\n",
+       "       height_scale: 5.0\n",
+       "       width_scale: 5.0\n",
+       "     }\n",
+       "   }\n",
+       "   matcher {\n",
+       "     argmax_matcher {\n",
+       "       matched_threshold: 0.5\n",
+       "       unmatched_threshold: 0.5\n",
+       "       ignore_thresholds: false\n",
+       "       negatives_lower_than_unmatched: true\n",
+       "       force_match_for_each_row: true\n",
+       "       use_matmul_gather: true\n",
+       "     }\n",
+       "   }\n",
+       "   similarity_calculator {\n",
+       "     iou_similarity {\n",
+       "     }\n",
+       "   }\n",
+       "   box_predictor {\n",
+       "     weight_shared_convolutional_box_predictor {\n",
+       "       conv_hyperparams {\n",
+       "         regularizer {\n",
+       "           l2_regularizer {\n",
+       "             weight: 3.9999998989515007e-05\n",
+       "           }\n",
+       "         }\n",
+       "         initializer {\n",
+       "           random_normal_initializer {\n",
+       "             mean: 0.0\n",
+       "             stddev: 0.009999999776482582\n",
+       "           }\n",
+       "         }\n",
+       "         activation: RELU_6\n",
+       "         batch_norm {\n",
+       "           decay: 0.996999979019165\n",
+       "           scale: true\n",
+       "           epsilon: 0.0010000000474974513\n",
+       "         }\n",
+       "       }\n",
+       "       depth: 128\n",
+       "       num_layers_before_predictor: 4\n",
+       "       kernel_size: 3\n",
+       "       class_prediction_bias_init: -4.599999904632568\n",
+       "       share_prediction_tower: true\n",
+       "       use_depthwise: true\n",
+       "     }\n",
+       "   }\n",
+       "   anchor_generator {\n",
+       "     multiscale_anchor_generator {\n",
+       "       min_level: 3\n",
+       "       max_level: 7\n",
+       "       anchor_scale: 4.0\n",
+       "       aspect_ratios: 1.0\n",
+       "       aspect_ratios: 2.0\n",
+       "       aspect_ratios: 0.5\n",
+       "       scales_per_octave: 2\n",
+       "     }\n",
+       "   }\n",
+       "   post_processing {\n",
+       "     batch_non_max_suppression {\n",
+       "       score_threshold: 9.99999993922529e-09\n",
+       "       iou_threshold: 0.6000000238418579\n",
+       "       max_detections_per_class: 100\n",
+       "       max_total_detections: 100\n",
+       "       use_static_shapes: false\n",
+       "     }\n",
+       "     score_converter: SIGMOID\n",
+       "   }\n",
+       "   normalize_loss_by_num_matches: true\n",
+       "   loss {\n",
+       "     localization_loss {\n",
+       "       weighted_smooth_l1 {\n",
+       "       }\n",
+       "     }\n",
+       "     classification_loss {\n",
+       "       weighted_sigmoid_focal {\n",
+       "         gamma: 2.0\n",
+       "         alpha: 0.25\n",
+       "       }\n",
+       "     }\n",
+       "     classification_weight: 1.0\n",
+       "     localization_weight: 1.0\n",
+       "   }\n",
+       "   encode_background_as_zeros: true\n",
+       "   normalize_loc_loss_by_codesize: true\n",
+       "   inplace_batchnorm_update: true\n",
+       "   freeze_batchnorm: false\n",
+       " },\n",
+       " 'train_config': batch_size: 128\n",
+       " data_augmentation_options {\n",
+       "   random_horizontal_flip {\n",
+       "   }\n",
+       " }\n",
+       " data_augmentation_options {\n",
+       "   random_crop_image {\n",
+       "     min_object_covered: 0.0\n",
+       "     min_aspect_ratio: 0.75\n",
+       "     max_aspect_ratio: 3.0\n",
+       "     min_area: 0.75\n",
+       "     max_area: 1.0\n",
+       "     overlap_thresh: 0.0\n",
+       "   }\n",
+       " }\n",
+       " sync_replicas: true\n",
+       " optimizer {\n",
+       "   momentum_optimizer {\n",
+       "     learning_rate {\n",
+       "       cosine_decay_learning_rate {\n",
+       "         learning_rate_base: 0.07999999821186066\n",
+       "         total_steps: 50000\n",
+       "         warmup_learning_rate: 0.026666000485420227\n",
+       "         warmup_steps: 1000\n",
+       "       }\n",
+       "     }\n",
+       "     momentum_optimizer_value: 0.8999999761581421\n",
+       "   }\n",
+       "   use_moving_average: false\n",
+       " }\n",
+       " fine_tune_checkpoint: \"PATH_TO_BE_CONFIGURED\"\n",
+       " num_steps: 50000\n",
+       " startup_delay_steps: 0.0\n",
+       " replicas_to_aggregate: 8\n",
+       " max_number_of_boxes: 100\n",
+       " unpad_groundtruth_tensors: false\n",
+       " fine_tune_checkpoint_type: \"classification\"\n",
+       " fine_tune_checkpoint_version: V2,\n",
+       " 'train_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " },\n",
+       " 'eval_config': metrics_set: \"coco_detection_metrics\"\n",
+       " use_moving_averages: false,\n",
+       " 'eval_input_configs': [label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " }\n",
+       " ],\n",
+       " 'eval_input_config': label_map_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " shuffle: false\n",
+       " num_epochs: 1\n",
+       " tf_record_input_reader {\n",
+       "   input_path: \"PATH_TO_BE_CONFIGURED\"\n",
+       " }}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,11 +643,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python Tensorflow\\models\\research\\object_detection\\model_main_tf2.py --model_dir=Tensorflow\\workspace\\models\\my_ssd_mobnet --pipeline_config_path=Tensorflow\\workspace\\models\\my_ssd_mobnet\\pipeline.config --num_train_steps=2000\n"
+     ]
+    }
+   ],
    "source": [
     "print(command)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if it's run in the notebook you can't see the status update, preferrably do it in cmd. below is the command to run it in the notebook"
    ]
   },
   {
@@ -482,28 +679,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install any missing modules if error occurs \\"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install gin-config"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 8.0 Evaluate the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,9 +693,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python Tensorflow\\models\\research\\object_detection\\model_main_tf2.py --model_dir=Tensorflow\\workspace\\models\\my_ssd_mobnet --pipeline_config_path=Tensorflow\\workspace\\models\\my_ssd_mobnet\\pipeline.config --checkpoint_dir=Tensorflow\\workspace\\models\\my_ssd_mobnet\n"
+     ]
+    }
+   ],
    "source": [
     "print(command)"
    ]
